Fix stylign issue on mobile

--- a/web/src/main/components/Landing.sass
+++ b/web/src/main/components/Landing.sass
@@ -18,7 +18,7 @@
 
 
   .landing-header
-    margin: 20px auto
+    margin: 20px
     display: flex
     justify-content: space-between
     align-items: center
@@ -100,6 +100,7 @@
 
     .landing-header
       max-width: 1000px
+      margin: 20px auto
 
       .logo-wrapper
         font-size: 36px
